# fluxion-desktop

./: .clinerules  .env.e2e  .env.e2e.example  .env.example  .eslintignore  .gitignore  .google-credentials.json  .npmrc  .worktreeinclude  AGENTS.md  ARGOS-INTEGRATION-SPECS.md  AUDIT_E2E_FLUXION.md  CLAUDE-VOICE.md  CLAUDE.md  CONTEXT-FOR-CLAUDE-CODE.md  COVE-FINAL-VERIFICATION.md  COVE-SKILLS-CLAUDE-VOICE-AGENT.md  COVE-VERIFICATION-REPORT.md  DEBUG-DATE-SHIFT.md  DELIVERABLE_MULTI_TURN_TESTS.md  DETERMINISTIC-EXECUTION-PLAN.md  DOSSIER-SARA-VOIP-BUG.md  Dockerfile.e2e  FIX-CI-CD.md  FLUXION_E2E_2026-06-08.md  FLUXION_FEATURE_AUDIT_2026-06-08.md  FLUXION_STATUS_2026-06-08.md  HANDOFF.md  HANDOFF.md.bak-PRE-F30-20260708-193933  HANDOFF.md.bak-PRE-F31R-20260710-203723  HANDOFF.md.bak-PRE-TURNTAKING-20260708-185353  HANDOFF.md.bak-PRE-TURNTAKING-F2-20260708-192450  HANDOFF.md.bak.34v  INTEGRATION-TAURI-AUTOMATION.md  MAGAZZINO_BUILD_2026-06-08.md  MULTI_TURN_TESTS_SUMMARY.md  NETWORK-CONFIG.md  OUTPUT_3VERIFICHE_MIRATE_S325.txt  PLAN.md  PRD-FLUXION-COMPLETE-v3.md  (+56 more)
.claude/: AUDIT_crea_cliente_S367.md  CLAUDE_AI_VALIDATION_PROMPT.md  HANDOFF_CURRENT.md  NEXT_PROMPT_PER_GIUDICE_S365.md  NEXT_SESSION_PROMPT.S322.md  NEXT_SESSION_PROMPT.manual.md  NEXT_SESSION_PROMPT.manual.md.bak-PRE-S365CLOSE-20260613-135119  NEXT_SESSION_PROMPT.manual.md.bak-PRE-VERDICT-20260613-141700  NEXT_SESSION_PROMPT.manual.md.bak-bug27fix-20260610-181247  NEXT_SESSION_PROMPT.manual.md.bak-s329  NEXT_SESSION_PROMPT.md  NEXT_SESSION_PROMPT.md.bak-bug27fix-20260610-180756  NEXT_SESSION_PROMPT_FLUXION.md  NEXT_SESSION_PROMPT_R01-TER.md  NEXT_SESSION_PROMPT_S371.md  NEXT_SESSION_PROMPT_S372.md  NEXT_SESSION_PROMPT_scraper-recency.md  NORTH_STAR.md  PHASE_PRODUCTION_READINESS_A-Z.md  PLAYBOOK.md  PROMPT-windows-build-rev.md  PROMPT_CC_SESSIONE_R01.md  R01-BIS-GATE-OUTPUT.md  REPORT_SESSIONE_2026-06-11.md  REPORT_SESSIONE_2026-06-12.md  REPORT_SESSIONE_2026-06-12_S363.md  REPORT_SESSIONE_2026-06-12_S364.md  REPORT_SESSIONE_2026-06-13_S365.md  REPORT_SESSIONE_2026-06-13_S366.md  REPORT_SESSIONE_2026-06-15_S366.md  REPORT_SESSIONE_2026-06-16_S368.md  REPORT_SESSIONE_2026-06-16_S369.md  REPORT_SESSIONE_2026-06-18_S372.md  REPORT_SESSIONE_2026-06-20_S373.md  REPORT_SESSIONE_2026-06-20_S377.md  REPORT_SESSIONE_2026-06-21_S380.md  REPORT_SESSIONE_2026-06-23_S381.md  REPORT_SESSIONE_S370.md  SARA_STRESS_TEST_PATTERNS.md  SESSION_DIRTY.md  (+8 more)
.husky/: pre-commit
.kimi/: AGENT-HIERARCHY.md  EXAMPLE-USAGE.md  README.md  config.json
.parlant/: agent-guidelines.md  config.json  decision-log.md
fluxion-license-generator/: .gitignore  Cargo.toml  README.md
fluxion-license-generator/examples/: example-license.json
fluxion-license-generator/src/: main.rs
src/: App.tsx  (+3 more)
src-tauri/: Cargo.toml  Cargo.toml.bak10  Cargo.toml.bak6  Cargo.toml.bak7  Cargo.toml.bak8  Cargo.toml.tauri1  Info.plist  entitlements.plist  fluxion.db  fluxion.db-shm  fluxion.db-wal  installer-hooks.nsh  seed_data.sql  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: ipc_bench.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_whatsapp_templates.sql  003_orari_e_festivita.sql  004_appuntamenti_state_machine.sql  005_loyalty_pacchetti_vip.sql  006_pacchetto_servizi.sql  007_fatturazione_elettronica.sql  008_faq_template_soprannome.sql  009_cassa_incassi.sql  010_mock_data.sql  011_voice_agent.sql  012_operatori_voice_agent.sql  013_waitlist.sql  014_voice_sessions_enterprise.sql  015_license_system.sql  016_suppliers.sql  017_smtp_settings.sql  018_gdpr_audit_logs.sql  019_schede_clienti_verticali.sql  020_license_ed25519.sql  021_setup_config.sql  022_whatsapp_invii_pacchetti.sql  023_groq_setup.sql  024_operatori_features.sql  025_operatori_commissioni.sql  026_impostazioni_sdi_key.sql  027_scheda_fitness.sql  028_scheda_medica.sql  029_sdi_multi_provider.sql  030_cliente_media.sql  031_listini_fornitori.sql  032_voip_sip_credentials.sql  033_operatori_genere.sql  034_blocchi_orario.sql  035_scheda_pet.sql  036_missing_indexes.sql  037_gdpr_art9_consent.sql  038_encryption_migration_state.sql  039_views_post_encryption.sql  040_suppliers_drop_unique_for_encryption.sql  (+2 more)
src-tauri/migrations/seeds/: seed_altro.sql  seed_auto.sql  seed_medical.sql  seed_salone.sql  seed_wellness.sql
src-tauri/src/: data_migration.rs  encryption.rs  http_bridge.rs  lib.rs
src-tauri/src.backup.20260205/: lib.rs
src-tauri/src.backup.20260205/commands/: appuntamenti.rs  clienti.rs  dashboard.rs  license_ed25519.rs  loyalty.rs  mod.rs  orari.rs  rag.rs  schede_cliente.rs  settings.rs  setup.rs  support.rs  voice_pipeline.rs  whatsapp.rs
src-tauri/src.backup.20260205/domain/: audit.rs  errors.rs  mod.rs
src-tauri/src.backup.20260205/infra/: mod.rs
src-tauri/src.backup.20260205/infra/repositories/: appuntamento_repo.rs  audit_repository.rs
src-tauri/src.backup.20260205/services/: appuntamento_service.rs  festivita_service.rs  validation_service.rs
src-tauri/src/commands/: analytics.rs  appuntamenti.rs  appuntamenti_ddd.rs  audit.rs  cassa.rs  clienti.rs  dashboard.rs  diagnostic.rs  faq_template.rs  fatture.rs  license.rs  license_ed25519.rs  license_ed25519_v1.rs  listini.rs  loyalty.rs  magazzino.rs  mcp.rs  media.rs  mod.rs  operatori.rs  orari.rs  preflight.rs  rag.rs  remote_assist.rs  schede_cliente.rs  servizi.rs  settings.rs  setup.rs  supplier.rs  support.rs  voice.rs  voice_calls.rs  voice_pipeline.rs  whatsapp.rs
src-tauri/src/domain/: appuntamento_aggregate.rs  audit.rs  mod.rs  repository.rs
src-tauri/src/infra/repositories/: appuntamento_repo.rs  audit_repository.rs  mod.rs
src-tauri/src/services/: appuntamento_service.rs  audit_service.rs  festivita_service.rs  mod.rs  validation_service.rs
src-tauri/tests/: integration_appuntamenti.rs  integration_backup.rs  integration_clienti.rs  integration_encryption_repair.rs  integration_fatture.rs  integration_license_revoke.rs  integration_operatori.rs  integration_supplier.rs
src-tauri/tests/common/: mod.rs
(+2867 files in other folders)
