[package]
name = "fluxion-license-generator"
version = "1.0.0"
edition = "2021"
description = "FLUXION License Generator - Tool ufficiale per generare licenze Ed25519 offline"
authors = ["FLUXION Team"]

[[bin]]
name = "fluxion-keygen"
path = "src/main.rs"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sysinfo = "0.31"
base64 = "0.22"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
colored = "2"
anyhow = "1"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
