[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
tauri-plugin-fs = "2.4.4"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-store = "2.4.1"
tauri-plugin-process = "2"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.17"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"

# Fluxion Care (Support Bundle, Diagnostics)
zip = "2.1"
os_info = "3"

# License System (Phase 8)
sysinfo = "0.31"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }

# GDPR Encryption at Rest
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
pbkdf2 = { version = "0.12", features = ["simple"] }
hmac = "0.12"

# Auto-Update (Phase 8)
tauri-plugin-updater = "2"

# Voice & WhatsApp
urlencoding = "2.1"

# Environment variables
dotenvy = "0.15"

# HTTP Bridge for MCP integration (Live Testing)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# MCP Server for remote debugging (Claude Code / Cursor integration)
# Only enabled in debug builds for security
tauri-plugin-mcp = { git = "https://github.com/P3GLEG/tauri-plugin-mcp", branch = "main", optional = true }

# E2E Testing - Required for macOS WebDriver automation (CrabNebula)
tauri-plugin-automation = { version = "0.1", optional = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Environment features
development = []
production = []

# Testing features (expose internals)
testing = []

# E2E testing feature - REQUIRED for macOS with CrabNebula test-runner-backend
e2e = ["tauri-plugin-automation"]

# MCP Server feature - enables remote debugging via Claude Code / Cursor
# SECURITY: Only enable in development, NEVER in production builds
mcp = ["tauri-plugin-mcp"]

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"

# In-memory database per test
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

